fix article title alignments on homepage

--- a/app/assets/stylesheets/articles.css
+++ b/app/assets/stylesheets/articles.css
@@ -97,10 +97,13 @@
 
 .article-list-title {
 	color: #404040;
-	text_decoration: none;
+	text-decoration: none;
 	vertical-align: top;
 	font-family: "Chapaza";
 	font-size: 1.8em;
+	display: inline-block;
+	width: 70%;
+	float: right;
 	@media screen and (max-width: 768px) {
 		font-size: 1.2em;
 	}
